k8s/postgres-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user
spec:
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
      containers:
        - image: postgres
          name: postgres-user
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
spec:
  type: ClusterIP
  ports:
    - port: 3307
  selector:
    app: postgres-user
