k8s/tweet-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweet-service
  labels:
    app: tweet-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweet-service
  template:
    metadata:
      labels:
        app: tweet-service
    spec:
      containers:
        - name: tweet-service
          image: asia-southeast1-docker.pkg.dev/proven-solstice-371106/cardinalis/tweet-service
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 150
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
          # Configure the readiness probe
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 150
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
---
apiVersion: v1
kind: Service
metadata:
  name: tweet-service
  labels:
    app: tweet-service
    spring-boot: "true"
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: tweet-service
  type: ClusterIP
