k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
      - http:
          paths:
            - path: /tweet/*
              pathType: ImplementationSpecific
              backend:
                service:
                  name: tweet-service
                  port:
                    number: 8080
            - path: /user/*
              pathType: ImplementationSpecific
              backend:
                service:
                  name: user-service
                  port:
                    number: 8080
